--- a/frontend-react/src/components/NavBar/NavBar.scss
+++ b/frontend-react/src/components/NavBar/NavBar.scss
@@ -120,20 +120,22 @@
 
     div {
         position: fixed;
-        background: var(--secondary-color);
         top: 0;
         bottom: 0;
         right: 0;
         z-index: 5;
+
         padding: 1rem;
 
-        width: 60%;
+        width: 80%;
         height: 100vh;
 
         display: flex;
         justify-content: flex-end;
         align-items: flex-end;
         flex-direction: column;
+
+        background: var(--secondary-color);
         background: url('../../assets/navMenuBg4.png');
         background-blend-mode: soft-light;
         background-size: cover;
